--- a/src/ServiceStack.Azure.Storage/ServiceStack.Azure.Storage.csproj
+++ b/src/ServiceStack.Azure.Storage/ServiceStack.Azure.Storage.csproj
@@ -104,6 +104,7 @@
     <Compile Include="AzureBlobVirtualFile.cs" />
     <Compile Include="AzureBlobVirtualPathProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AzureTableCacheClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
