ServiceBus WIP - changing computers

--- a/src/ServiceStack.Azure.Messaging/ServiceStack.Azure.Messaging.csproj
+++ b/src/ServiceStack.Azure.Messaging/ServiceStack.Azure.Messaging.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ServiceBusMessageQueueClientFactory.cs" />
     <Compile Include="ServiceBusMqClient.cs" />
     <Compile Include="ServiceBusMqMessageFactory.cs" />
     <Compile Include="ServiceBusMqServer.cs" />
