--- a/test/ServiceStack.Azure.Tests/packages.config
+++ b/test/ServiceStack.Azure.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net452" />
   <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net452" />
   <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net452" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="NUnit" version="2.6.4" targetFramework="net452" />
   <package id="ServiceStack" version="4.0.48" targetFramework="net452" />
@@ -15,5 +16,6 @@
   <package id="ServiceStack.Server" version="4.0.48" targetFramework="net452" />
   <package id="ServiceStack.Text" version="4.0.48" targetFramework="net452" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net452" />
+  <package id="WindowsAzure.ServiceBus" version="3.0.9" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="6.1.0" targetFramework="net452" />
 </packages>
