Improved message dequeuing; more passing tests

--- a/test/ServiceStack.Azure.Tests/ServiceStack.Azure.Tests.csproj
+++ b/test/ServiceStack.Azure.Tests/ServiceStack.Azure.Tests.csproj
@@ -147,6 +147,11 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="settings.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
