--- a/test/ServiceStack.Azure.Tests/packages.config
+++ b/test/ServiceStack.Azure.Tests/packages.config
@@ -1,21 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net452" />
-  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net452" />
-  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net452" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
-  <package id="NUnit" version="2.6.4" targetFramework="net452" />
-  <package id="ServiceStack" version="4.0.48" targetFramework="net452" />
-  <package id="ServiceStack.Client" version="4.0.48" targetFramework="net452" />
-  <package id="ServiceStack.Common" version="4.0.48" targetFramework="net452" />
-  <package id="ServiceStack.Interfaces" version="4.0.48" targetFramework="net452" />
-  <package id="ServiceStack.OrmLite" version="4.0.48" targetFramework="net452" />
-  <package id="ServiceStack.Redis" version="4.0.48" targetFramework="net452" />
-  <package id="ServiceStack.Server" version="4.0.48" targetFramework="net452" />
-  <package id="ServiceStack.Text" version="4.0.48" targetFramework="net452" />
-  <package id="System.Spatial" version="5.7.0" targetFramework="net452" />
-  <package id="WindowsAzure.ServiceBus" version="3.0.9" targetFramework="net452" />
-  <package id="WindowsAzure.Storage" version="6.1.0" targetFramework="net452" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net45" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
+  <package id="NUnit" version="3.7.1" targetFramework="net45" />
+  <package id="ServiceStack" version="4.5.12" targetFramework="net45" />
+  <package id="ServiceStack.Client" version="4.5.12" targetFramework="net45" />
+  <package id="ServiceStack.Common" version="4.5.12" targetFramework="net45" />
+  <package id="ServiceStack.Interfaces" version="4.5.12" targetFramework="net45" />
+  <package id="ServiceStack.OrmLite" version="4.5.12" targetFramework="net45" />
+  <package id="ServiceStack.Redis" version="4.5.12" targetFramework="net45" />
+  <package id="ServiceStack.Server" version="4.5.12" targetFramework="net45" />
+  <package id="ServiceStack.Text" version="4.5.12" targetFramework="net45" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.3.0" targetFramework="net45" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net45" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net45" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="net45" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net45" />
+  <package id="WindowsAzure.ServiceBus" version="4.1.2" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="8.1.4" targetFramework="net45" />
 </packages>
