--- a/src/ServiceStack.Azure.Messaging/ServiceStack.Azure.Messaging.csproj
+++ b/src/ServiceStack.Azure.Messaging/ServiceStack.Azure.Messaging.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <Compile Include="ServiceBusMqClient.cs" />
     <Compile Include="ServiceBusMqMessageFactory.cs" />
+    <Compile Include="ServiceBusMqMessageProducer.cs" />
     <Compile Include="ServiceBusMqServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBusMqWorker.cs" />
