Fix build and net45 tests

--- a/test/ServiceStack.Azure.Tests/ServiceStack.Azure.Tests.csproj
+++ b/test/ServiceStack.Azure.Tests/ServiceStack.Azure.Tests.csproj
@@ -82,4 +82,10 @@
     <PackageReference Include="ServiceStack.Core" Version="1.0.*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="settings.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
