--- a/NuGet.Signed/ServiceStack.Azure.Signed/servicestack.azure.signed.csproj
+++ b/NuGet.Signed/ServiceStack.Azure.Signed/servicestack.azure.signed.csproj
@@ -23,6 +23,6 @@
   </metadata>
   <files>
       <file src="lib\**\*.*" target="lib" />
-      <file src="..\..\src\ServiceStack.Aws\**\*.cs" target="src" />
+      <file src="..\..\src\ServiceStack.Azure\**\*.cs" target="src" />
   </files>
 </package>
