--- a/tests/ServiceStack.Azure.Tests/ServiceStack.Azure.Tests.csproj
+++ b/tests/ServiceStack.Azure.Tests/ServiceStack.Azure.Tests.csproj
@@ -53,9 +53,7 @@
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.1.0" />
     <PackageReference Include="Microsoft.Azure.Management.ServiceBus" Version="1.4.0" />
 
-    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.3" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
     <PackageReference Include="System.Collections.Specialized" Version="4.3.0" />
 
