--- a/src/ServiceStack.Azure/ServiceStack.Azure.Core.csproj
+++ b/src/ServiceStack.Azure/ServiceStack.Azure.Core.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ServiceStack" Version="$(Version)" />
+    <PackageReference Include="ServiceStack.Core" Version="$(Version)" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
   </ItemGroup>
 
